Fix banner bug on mobile

--- a/WJ-2019/style.css
+++ b/WJ-2019/style.css
@@ -37,6 +37,10 @@ a:hover{
 	text-decoration: none;
 }
 
+a, a:visited {
+	color: #D80C18;
+}
+
 .highlight-text{
 	font-size: 2em;
 }
@@ -105,6 +109,7 @@ BANNER
 	background-attachment: fixed;
   	background-position: center;
   	/*background-position: center -200px;*/
+  	background-color: #ddd;
   	background-repeat: no-repeat;
   	background-size: cover;
 	height: 600px;
@@ -115,13 +120,19 @@ BANNER
 		width: 80%;
 	}
 	#banner{
+		background-attachment: fixed;
+  		background-position: center;
 		height: 480px;
+		background-size: cover;
 	}
 }
 
 @media (max-width: 576px){
 	#banner{
+		background-attachment: fixed;
+  		background-position: center;
 		height: 420px;
+		background-size: cover;
 	}
 }
 
